# lgr

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py  shell.nix
src/lgr/: __init__.py  admin.py  apps.py  drf.py  filters.py  forms.py  helpers.py  manage.py  mixin.py  models.py  settings.py  settings_dev.py  signals.py  tests.py  urls.py  validators.py  views.py
src/lgr/migrations/: 0001_initial.py  0002_item_image.py
src/lgr/static/: index.html
